updated minbox for projects screen. fixed overflow issue

--- a/assets/stylesheets/projects.css
+++ b/assets/stylesheets/projects.css
@@ -1,121 +1,122 @@
 section {
-	background: -moz-linear-gradient(315deg, #f4ebc3 50%, #fff);
-	background: -webkit-gradient(linear, 315deg, #f4ebc3 50%, #fff);
-	background: -webkit-linear-gradient(315deg, #f4ebc3 50%, #fff);
-	background: -o-linear-gradient(315deg, #f4ebc3 50%, #fff);
-	background: -ms-linear-gradient(315deg, #f4ebc3 50%, #fff);
-	background: linear-gradient(315deg, #f4ebc3 50%, #fff);
+  background: -moz-linear-gradient(315deg, #f4ebc3 50%, #fff);
+  background: -webkit-gradient(linear, 315deg, #f4ebc3 50%, #fff);
+  background: -webkit-linear-gradient(315deg, #f4ebc3 50%, #fff);
+  background: -o-linear-gradient(315deg, #f4ebc3 50%, #fff);
+  background: -ms-linear-gradient(315deg, #f4ebc3 50%, #fff);
+  background: linear-gradient(315deg, #f4ebc3 50%, #fff);
+  overflow: hidden;
 }
 
 h2 {
-	font-family: "Monoton";
-	font-size: 5em;
-	font-weight: 100;
-	margin: 0;
-	padding-left: 20px;
+  font-family: "Monoton";
+  font-size: 5em;
+  font-weight: 100;
+  margin: 0;
+  padding-left: 20px;
 }
 h3 {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 .project-row > h3 {
-	padding-left: 20px;
+  padding-left: 20px;
 }
 
 .row-container {
-	display: inline-flex;
-	flex-wrap: wrap;
-	padding-left: 20px;
+  display: inline-flex;
+  flex-wrap: wrap;
+  padding-left: 20px;
 }
 
 .project-square {
-	height: 8em;
-	width: 8em;
-	display: flex;
-	align-items: flex-end;
-	justify-content: flex-end;
-	text-align: right;
-	z-index: 5;
+  height: 8em;
+  width: 8em;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  text-align: right;
+  z-index: 5;
 }
 .project-square:hover {
-	cursor: pointer;
+  cursor: pointer;
 }
 .project-square.ghost {
-	z-index: 1;
+  z-index: 1;
 }
 .project-square.ghost:hover {
-	cursor: unset;
+  cursor: unset;
 }
 @media (max-width: 580px) {
-	.project-square {
-		height: 7em;
-		width: 7em;
-	}
+  .project-square {
+    height: 7em;
+    width: 7em;
+  }
 }
 .project-square p {
-	margin: 0;
-	padding-right: 5px;
+  margin: 0;
+  padding-right: 5px;
 }
 
 .project-details {
-	padding: 20px;
-	background-image: url("/assets/images/space.png");
-	background-size: cover;
-	font-weight: 700;
-	word-spacing: 0.3em;
+  padding: 20px;
+  background-image: url("/assets/images/space.png");
+  background-size: cover;
+  font-weight: 700;
+  word-spacing: 0.3em;
 }
 .project-details h3 {
-	margin-top: 0;
-	font-size: 1.7em;
-	background-color: #ffffff;
+  margin-top: 0;
+  font-size: 1.7em;
+  background-color: #ffffff;
 }
 .project-details h4 {
-	background-color: #ffffff;
-	margin-bottom: 0;
-	font-size: 1.5em;
+  background-color: #ffffff;
+  margin-bottom: 0;
+  font-size: 1.5em;
 }
 .project-details p {
-	background-color: #ffffff;
-	margin-top: 0;
-	font-size: 1.1em;
+  background-color: #ffffff;
+  margin-top: 0;
+  font-size: 1.1em;
 }
 
 #work-in-progress .specs {
-	width: 70%;
+  width: 70%;
 }
 #just-for-fun .specs,
 #just-for-fun .project-description {
-	width: 50%;
+  width: 50%;
 }
 
 #in-the-wild {
-	background-position: 0% 0%;
+  background-position: 0% 0%;
 }
 #escuela {
-	background-position: 0% 33%;
+  background-position: 0% 33%;
 }
 #work-in-progress {
-	background-position: 0% 66%;
+  background-position: 0% 66%;
 }
 #just-for-fun {
-	background-position: 0% 100%;
+  background-position: 0% 100%;
 }
 
 .project-links {
-	position: relative;
-	z-index: 10;
+  position: relative;
+  z-index: 10;
 }
 
 .project-links a {
-	color: white;
+  color: white;
 }
 
 .projects-footer {
-	width: 100%;
-	height: 150px;
-	padding: 0;
-	text-align: right;
-	position: relative;
+  width: 100%;
+  height: 150px;
+  padding: 0;
+  text-align: right;
+  position: relative;
 }
 .projects-footer img {
-	margin: -438px 0 0 0;
+  margin: -438px 0 0 0;
 }
